--- a/async-race/src/pages/garage/style.css
+++ b/async-race/src/pages/garage/style.css
@@ -115,3 +115,28 @@
 .car-list {
     margin-bottom: 20px;
 }
+
+.page-numbers {
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    background-color: #abababc0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+}
+
+.btn-number {
+    width: 28px;
+    height: 28px;
+    font-size: 15px;
+    border-radius: 50%;
+    margin-right: 15px;
+    margin-left: 15px;
+    cursor: pointer;
+}
+
+.btn-number:hover{
+    background-color: #fff;;
+}
