--- a/async-race/src/global.css
+++ b/async-race/src/global.css
@@ -14,6 +14,13 @@
   gap: 1rem;
 }
 
+.btns-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 15px;
+}
+
 /*Блок пагинация*/
 .wrapper-pagination {
   width: 90%;
