--- a/async-race/src/global.css
+++ b/async-race/src/global.css
@@ -1,8 +1,8 @@
 body {
-  background-image:  url(./assets/img/race.jpg);
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 h1 {
-  background-color: rgb(41, 87, 128);
   padding: 10px;
   text-align: center;
 }
@@ -15,6 +15,11 @@ h1 {
 .btn:hover {
   color: wheat;
   background-color: #6357efdc;
+}
+
+input {
+  border-radius: 10px;
+  padding: 1px 8px;
 }
 
 /*Блок и forms*/
@@ -111,7 +116,7 @@ h1 {
   align-items: flex-end;
   height: 48px;
   width: 64px;
-  left: 500%;
+  left: 0%;
 }
 
 .move-car__img svg {
